[gd_scene load_steps=14 format=3 uid="uid://lcwec6vd0vep"]

[ext_resource type="Script" uid="uid://dcd1yfxc02owi" path="res://missions/mission_9.gd" id="1_f1qkx"]
[ext_resource type="Texture2D" uid="uid://c3rbq7njvoaf0" path="res://art/ice_floor3.png" id="2_cwjte"]
[ext_resource type="PackedScene" uid="uid://cnewpfj0saicm" path="res://missions/Hud_Mission.tscn" id="3_hfx4n"]
[ext_resource type="AudioStream" uid="uid://532t1b3ql5ff" path="res://sound/bgm.mp3" id="4_a3vsb"]
[ext_resource type="Script" uid="uid://be8h6oqce2lfd" path="res://Music.gd" id="5_eygut"]
[ext_resource type="AudioStream" uid="uid://rsh6crkjjxk4" path="res://art/gameover.wav" id="6_ha4m8"]
[ext_resource type="Script" uid="uid://fh8j43g4cbk6" path="res://DeathBox.gd" id="7_ymvge"]
[ext_resource type="Texture2D" uid="uid://c3avc7vwurlau" path="res://art/water.png" id="8_iri6e"]
[ext_resource type="Texture2D" uid="uid://dxhgr6yrn6k0m" path="res://art/water2.png" id="9_2wf85"]
[ext_resource type="PackedScene" uid="uid://b5a1x7htlysw6" path="res://Mob.tscn" id="10_1bpkc"]
[ext_resource type="PackedScene" uid="uid://dtevh17wsaoom" path="res://Player.tscn" id="11_clojw"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_2lshl"]
frames = 2
speed_scale = 2.0
frame_0/texture = ExtResource("8_iri6e")
frame_1/texture = ExtResource("9_2wf85")
frame_1/duration = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xy06k"]
size = Vector2(480, 80)

[node name="Mission9" type="Node"]
script = ExtResource("1_f1qkx")

[node name="ColorRect2" type="ColorRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -272.0
offset_top = -152.0
offset_right = 272.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="IceTextureFloor" type="TextureRect" parent="."]
self_modulate = Color(0.972549, 1, 1, 0.784314)
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -1.0
offset_right = 120.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cwjte")
expand_mode = 2
stretch_mode = 1
flip_h = true
flip_v = true
metadata/_edit_use_anchors_ = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 152)

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HUD_Mission" parent="." instance=ExtResource("3_hfx4n")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_a3vsb")
script = ExtResource("5_eygut")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ha4m8")

[node name="DeathBox" type="Area2D" parent="."]
position = Vector2(0, 720)
collision_mask = 3
script = ExtResource("7_ymvge")

[node name="WaterTexture" type="TextureRect" parent="DeathBox"]
modulate = Color(1, 1, 1, 0.686275)
texture_filter = 1
offset_top = -128.0
offset_right = 480.0
texture = SubResource("AnimatedTexture_2lshl")
expand_mode = 4
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBox"]
position = Vector2(240, -40)
shape = SubResource("RectangleShape2D_xy06k")
debug_color = Color(0.980369, 0, 0.380257, 0.42)

[node name="Mob1" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(24, 432)
collision_mask = 3
mass = 40.0
linear_damp_mode = 1
isBigPenguin = true

[node name="Shadow" parent="Mob1" index="1"]
modulate = Color(1, 1, 1, 0.35)
scale = Vector2(0.6, 0.45)

[node name="AnimatedSprite2D" parent="Mob1" index="2"]
scale = Vector2(0.1, 0.1)
animation = &"up"

[node name="CollisionShape2D" parent="Mob1" index="3"]
scale = Vector2(1, 1)

[node name="Mob2" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(80, 456)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob2" index="2"]
animation = &"up"

[node name="Mob4" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(160, 456)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob4" index="2"]
animation = &"up"

[node name="Mob6" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(240, 456)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob6" index="2"]
animation = &"up"

[node name="Mob8" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(320, 456)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob8" index="2"]
animation = &"up"

[node name="Mob10" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(400, 456)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob10" index="2"]
animation = &"up"

[node name="Mob15" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(456, 432)
collision_mask = 3
mass = 40.0
linear_damp_mode = 1
isBigPenguin = true

[node name="Shadow" parent="Mob15" index="1"]
modulate = Color(1, 1, 1, 0.35)
scale = Vector2(0.6, 0.45)

[node name="AnimatedSprite2D" parent="Mob15" index="2"]
scale = Vector2(0.1, 0.1)
animation = &"up"

[node name="CollisionShape2D" parent="Mob15" index="3"]
scale = Vector2(1, 1)

[node name="Mob11" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(24, 536)
collision_mask = 3
mass = 40.0
linear_damp_mode = 1
isBigPenguin = true

[node name="Shadow" parent="Mob11" index="1"]
modulate = Color(1, 1, 1, 0.35)
scale = Vector2(0.6, 0.45)

[node name="AnimatedSprite2D" parent="Mob11" index="2"]
scale = Vector2(0.1, 0.1)
animation = &"up"

[node name="CollisionShape2D" parent="Mob11" index="3"]
scale = Vector2(1, 1)

[node name="Mob13" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(120, 512)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob13" index="2"]
animation = &"up"

[node name="Mob16" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(200, 512)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob16" index="2"]
animation = &"up"

[node name="Mob18" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(280, 512)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob18" index="2"]
animation = &"up"

[node name="Mob20" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(360, 512)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob20" index="2"]
animation = &"up"

[node name="Mob22" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(456, 536)
collision_mask = 3
mass = 40.0
linear_damp_mode = 1
isBigPenguin = true

[node name="Shadow" parent="Mob22" index="1"]
modulate = Color(1, 1, 1, 0.35)
scale = Vector2(0.6, 0.45)

[node name="AnimatedSprite2D" parent="Mob22" index="2"]
scale = Vector2(0.1, 0.1)
animation = &"up"

[node name="CollisionShape2D" parent="Mob22" index="3"]
scale = Vector2(1, 1)

[node name="Mob3" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(80, 552)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob3" index="2"]
animation = &"up"

[node name="Mob5" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(160, 552)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob5" index="2"]
animation = &"up"

[node name="Mob7" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(240, 552)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob7" index="2"]
animation = &"up"

[node name="Mob9" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(320, 552)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob9" index="2"]
animation = &"up"

[node name="Mob12" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(400, 552)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob12" index="2"]
animation = &"up"

[node name="Player" parent="." instance=ExtResource("11_clojw")]

[node name="Mob14" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(112, 408)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob14" index="2"]
animation = &"up"

[node name="Mob17" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(192, 408)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob17" index="2"]
animation = &"up"

[node name="Mob19" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(272, 408)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob19" index="2"]
animation = &"up"

[node name="Mob21" parent="." instance=ExtResource("10_1bpkc")]
position = Vector2(352, 408)
collision_mask = 3
mass = 20.0
linear_damp_mode = 1

[node name="AnimatedSprite2D" parent="Mob21" index="2"]
animation = &"up"

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="finished" from="Music" to="Music" method="_on_finished"]
[connection signal="body_entered" from="DeathBox" to="Player" method="_on_death_box_body_entered"]
[connection signal="fell" from="Player" to="." method="_on_player_fell"]

[editable path="Mob1"]
[editable path="Mob2"]
[editable path="Mob4"]
[editable path="Mob6"]
[editable path="Mob8"]
[editable path="Mob10"]
[editable path="Mob15"]
[editable path="Mob11"]
[editable path="Mob13"]
[editable path="Mob16"]
[editable path="Mob18"]
[editable path="Mob20"]
[editable path="Mob22"]
[editable path="Mob3"]
[editable path="Mob5"]
[editable path="Mob7"]
[editable path="Mob9"]
[editable path="Mob12"]
[editable path="Mob14"]
[editable path="Mob17"]
[editable path="Mob19"]
[editable path="Mob21"]
